<resources>
    <string name="app_name">Quizr</string>

    <string name="email_placeholder">Email</string>
    <string name="password_placeholder">Password</string>
    <string name="password_confirmation_placeholder">Confirm Password</string>
    <string name="login_btn">LogIn</string>
    <string name="become_member_btn">Not a member? Signup</string>
    <string name="signup_btn">Signup</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_signup">Signup</string>
    <string name="internet_not_connected">Please connect to the internet first!</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_categories_page">CategoriesPage</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="login_screen_btn">Have an account? Login here!</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="authenticate">Please wait..Authenticating you for awesomeness!</string>
</resources>
